add package-running-apps